force-app/main/default/objects/TestResult__c/fields/CorrectedDate__c.field-meta.xml
<CustomField>
    <fullName>CorrectedDate__c</fullName>
    <label>Corrected Date</label>
    <type>Date</type>
</CustomField>