force-app/main/default/objects/TestResult__c/fields/CorrectionStatus__c.field-meta.xml
<CustomField>
    <fullName>CorrectionStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correction Status</label>
    <type>Checkbox</type>
</CustomField>