force-app/main/default/objects/TestResult__c/fields/Corrector__c.field-meta.xml
<CustomField>
    <fullName>Corrector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corrector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CorrectorTestResults</relationshipName>
    <type>Lookup</type>
</CustomField>