force-app/main/default/objects/TestResult__c/fields/DefectNotes__c.field-meta.xml
<CustomField>
    <fullName>DefectNotes__c</fullName>
    <label>Defect Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>