force-app/main/default/objects/TestResult__c/fields/DefectType__c.field-meta.xml
<CustomField>
    <fullName>DefectType__c</fullName>
    <label>Defect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Modification Requirement</fullName>
            </value>
            <value>
                <fullName>New Requirement</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>Q&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>