force-app/main/default/objects/TestResult__c/fields/DefectTypeDetail__c.field-meta.xml
<CustomField>
    <fullName>DefectTypeDetail__c</fullName>
    <label>Defect Type Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permission</fullName>
            </value>
            <value>
                <fullName>Function</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>UI/UX/</fullName>
            </value>
            <value>
                <fullName>I/F</fullName>
            </value>
            <value>
                <fullName>System Environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>