force-app/main/default/objects/TestResult__c/fields/DevComment__c.field-meta.xml
<CustomField>
    <fullName>DevComment__c</fullName>
    <label>Dev Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>