force-app/main/default/objects/TestResult__c/fields/DevResult__c.field-meta.xml
<CustomField>
    <fullName>DevResult__c</fullName>
    <label>Dev Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>