force-app/main/default/objects/TestResult__c/fields/Fail__c.field-meta.xml
<CustomField>
    <fullName>Fail__c</fullName>
    <formula>If (ISPICKVAL(DefectType__c, &quot;Defect&quot;) &amp;&amp; NOT(Pass__c), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fail</label>
    <type>Checkbox</type>
</CustomField>