force-app/main/default/objects/TestResult__c/fields/Is_Progress__c.field-meta.xml
<CustomField>
    <fullName>Is_Progress__c</fullName>
    <formula>ISPICKVAL( TestResult__c , &quot;Pass&quot;) ||  ISPICKVAL( TestResult__c , &quot;Fail&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Progress?</label>
    <type>Checkbox</type>
</CustomField>