force-app/main/default/objects/TestResult__c/fields/IsCorrected__c.field-meta.xml
<CustomField>
    <fullName>IsCorrected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Corrected?</label>
    <type>Checkbox</type>
</CustomField>