force-app/main/default/objects/TestResult__c/fields/IsDefect__c.field-meta.xml
<CustomField>
    <fullName>IsDefect__c</fullName>
    <formula>AND(ISPICKVAL(TestResult__c, &quot;Fail&quot;), ISPICKVAL(DefectType__c, &apos;Defect&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Defect?</label>
    <type>Checkbox</type>
</CustomField>