force-app/main/default/objects/TestResult__c/fields/MProject__c.field-meta.xml
<CustomField>
    <fullName>MProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
    <relationshipLabel>TestResults</relationshipLabel>
    <relationshipName>TestResults</relationshipName>
    <type>Lookup</type>
</CustomField>