force-app/main/default/objects/TestResult__c/fields/Number_of_Retest__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Retest__c</fullName>
    <label>Number of Retest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>5th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>