force-app/main/default/objects/TestResult__c/fields/Pass__c.field-meta.xml
<CustomField>
    <fullName>Pass__c</fullName>
    <formula>If ((ISPICKVAL(TestResult__c, &quot;Pass&quot;) || ISPICKVAL(RetestResult__c, &quot;Pass&quot;)), True, If (ISPICKVAL(TestResult__c, &quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(DefectType__c, &quot;Defect&quot;)) &amp;&amp; NOT(ISPICKVAL(DefectType__c, &quot;&quot;)), True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass</label>
    <type>Checkbox</type>
</CustomField>