force-app/main/default/objects/TestResult__c/fields/RetestComment__c.field-meta.xml
<CustomField>
    <fullName>RetestComment__c</fullName>
    <label>Retest Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>