force-app/main/default/objects/TestResult__c/fields/RetestDate__c.field-meta.xml
<CustomField>
    <fullName>RetestDate__c</fullName>
    <label>Retest Date</label>
    <type>Date</type>
</CustomField>