force-app/main/default/objects/TestResult__c/fields/ScenarioName__c.field-meta.xml
<CustomField>
    <fullName>ScenarioName__c</fullName>
    <formula>TestCaseId__r.ScenarioName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scenario Name</label>
    <type>Text</type>
</CustomField>