force-app/main/default/objects/TestResult__c/fields/TestCaseId__c.field-meta.xml
<CustomField>
    <fullName>TestCaseId__c</fullName>
    <label>Test Case Id</label>
    <referenceTo>TestCase__c</referenceTo>
    <relationshipLabel>TestResults</relationshipLabel>
    <relationshipName>TestResults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>