force-app/main/default/objects/TestResult__c/fields/TestDate__c.field-meta.xml
<CustomField>
    <fullName>TestDate__c</fullName>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>