force-app/main/default/objects/TestResult__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TestResults</relationshipName>
    <type>Lookup</type>
</CustomField>