force-app/main/default/objects/TestResult__c/fields/TestResultNo__c.field-meta.xml
<CustomField>
    <fullName>TestResultNo__c</fullName>
    <label>Test Result No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>