force-app/main/default/objects/TestResult__c/fields/TestScenario__c.field-meta.xml
<CustomField>
    <fullName>TestScenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Scenario</label>
    <referenceTo>TestScenario__c</referenceTo>
    <relationshipLabel>TestResults</relationshipLabel>
    <relationshipName>TestResults</relationshipName>
    <type>Lookup</type>
</CustomField>