force-app/main/default/objects/TestResult__c/fields/TestType__c.field-meta.xml
<CustomField>
    <fullName>TestType__c</fullName>
    <formula>TEXT(TestCaseId__r.TestType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Type</label>
    <type>Text</type>
</CustomField>