force-app/main/default/objects/TestResult__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tester__c</columns>
    <columns>TestDate__c</columns>
    <columns>TestResult__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>